fix : fix layout

--- a/src/components/Room.css
+++ b/src/components/Room.css
@@ -1,7 +1,7 @@
 .room-tile {
     width: 388px;
     height: 470px;
-    margin: 13px;
+    /*margin: 13px;*/
     border-radius: 15px;
     overflow: hidden;
     background: #FFFFFF;
