--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -7,12 +7,17 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
+.body {
+    display: flex;
+    justify-content: center;
+}
+
 .room-container {
-    display: inline-flex;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+    width: fit-content;
+    gap: 26px;
 
-    /*margin-inline: 5%;*/
-
-    border: 2px red solid;
 }
