--- a/src/components/Room/Header/style.css
+++ b/src/components/Room/Header/style.css
@@ -6,6 +6,7 @@
     height: 53px;
     color: white;
     font-size: 19px;
+    font-weight: 400;
 
     align-items: center;
     padding-inline: 10px;
