--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,23 +2,29 @@
     position: sticky;
     top: 0;
     height: 90px;
-    line-height: 90px;
-    background-color: white;
+    /*line-height: 90px;*/
+    background: white;
     font-size: 20px;
-    text-align: center;
+    /*text-align: center;*/
 
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .menu {
     background: #e3e5e8;
     width: 215px;
+    height: 100%;
     border: 0;
     padding: 0;
     font: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 .menu:hover {
     background: #dde0e3;
@@ -34,9 +40,14 @@
     color: #FFFFFF;
     background: #49C5B6;
     width: 215px;
+    height: 100%;
     border: 0;
     padding: 0;
     font: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 }
 .settings:hover {
     background: #46bdaf;
