--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -2,4 +2,8 @@
     position: sticky;
     top: 0;
     height: 11.4rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
