--- a/src/routes/browser/Home/Footer/style.css
+++ b/src/routes/browser/Home/Footer/style.css
@@ -1,3 +1,6 @@
 .footer {
-    background: #060212;
+    color: #9b9da8;
+    background: #3a3e4c;
+    text-align: center;
+    font-size: 0.85rem;
 }
