chore : delete unused old js components

--- a/src/components/browser/Footer/style.css
+++ b/src/components/browser/Footer/style.css
@@ -1,6 +1,6 @@
 .footer {
-    color: #9b9da8;
-    background: #3a3e4c;
+    color: #9B9DA8;
+    background: #3A3E4C;
     text-align: center;
     font-size: 0.85rem;
 }
