--- a/src/components/browser/RoomTile/style.css
+++ b/src/components/browser/RoomTile/style.css
@@ -49,25 +49,67 @@
 .member-display {
     height: 15.4rem;
     background: #F6F6F6;
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
     margin-inline: 0.85rem;
     border-radius: 1rem;
-    padding-inline: 1rem;
+    /*padding-inline: 1rem;*/
+    position: relative;
 }
-
-.member {
-    line-height: 3rem;
-    font-size: 0.85rem;
+.line {
+    position: absolute;
+    width: 100%;
+    height: 15.4rem;
+    display: flex;
+    flex-direction: column;
+    padding-inline: 1rem;
+    box-sizing: border-box;
+}
+.line div {
+    flex-grow: 1;
     border-bottom: 0.1rem #dedede solid;
 }
+.line div:last-child {border-bottom: 0;}
 
-.member:last-child {
-    border-bottom: 0;
+.members {
+    position: absolute;
+    padding-inline: 1.2rem;
+}
+.member {
+    display: flex;
+    flex-direction: row;
+    height: 3.08rem;
+    align-items: center;
+    gap: 0.65rem;
+}
+.member .icon {
+    height: 2rem;
+    width: 2rem;
+    /*border-radius: 0.3rem;*/
+    overflow: hidden;
+    /*border: red 1px solid;*/
+}
+.member .nickname {
+    width: 14.75rem;
+    /*flex-grow: 1;*/
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
-.member span {
-    display: inline-block;
-    vertical-align: center;
-    line-height: normal;
-}
+
+/*.member {*/
+/*    line-height: 3rem;*/
+/*    font-size: 0.85rem;*/
+/*    border-bottom: 0.1rem #dedede solid;*/
+/*}*/
+
+/*.member:last-child {*/
+/*    border-bottom: 0;*/
+/*}*/
+
+/*.member span {*/
+/*    display: inline-block;*/
+/*    vertical-align: center;*/
+/*    line-height: normal;*/
+/*}*/
