fix : fix footer at bottom

--- a/src/components/browser/RoomGrid/style.css
+++ b/src/components/browser/RoomGrid/style.css
@@ -1,3 +1,7 @@
+.room-grid {
+    padding-bottom: 4rem;
+    min-height: calc(100vh - 23.4rem);
+}
 .room-grid ul {
     margin: auto;
     list-style-type: none;
