fix : fix member fonst size

--- a/src/components/browser/RoomTile/style.css
+++ b/src/components/browser/RoomTile/style.css
@@ -84,6 +84,7 @@
     overflow: hidden;
 }
 .member .nickname {
+    font-size: 0.85rem;
     width: 14.85rem;
     text-overflow: ellipsis;
     overflow: hidden;
