chore : disable button feature

--- a/src/components/browser/Modal/PasswordModal.css
+++ b/src/components/browser/Modal/PasswordModal.css
@@ -46,5 +46,6 @@
 .password.modal button.join {background: #191919}
 .password.modal button.join:hover {background: #454545}
 .password.modal button.join:active {background: #363636}
+.password.modal button.join:disabled {background: #A7A7A7}
 
 .password.modal .abort {width: 4.5rem}
