fix : make refreash animation fluid

--- a/src/components/browser/Header/style.css
+++ b/src/components/browser/Header/style.css
@@ -155,5 +155,5 @@ text {
     justify-content: center;
 }
 
-.rotate {animation: rotate 0.5s linear infinite;}
+.rotate {animation: rotate 0.5s ease-in-out infinite;}
 @keyframes rotate { 100% {transform: rotate(360deg);} }
