--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,89 @@
 @font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 100;
-  src: url("./resource/fonts/NotoSansKR-Thin.otf") format("opentype");
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 300;
-  src: url("./resource/fonts/NotoSansKR-Light.otf") format("opentype");
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 400;
-  src: url("./resource/fonts/NotoSansKR-Regular.otf") format("opentype");
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 500;
-  src: url("./resource/fonts/NotoSansKR-Medium.otf") format("opentype");
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 700;
-  src: url("./resource/fonts/NotoSansKR-Bold.otf") format("opentype");
-}
-@font-face {
-  font-family: "Noto Sans KR";
-  font-weight: 900;
-  src: url("./resource/fonts/NotoSansKR-Black.otf") format("opentype");
+    font-family: "Noto Sans KR";
+    font-weight: 100;
+    src: url("./resource/fonts/NotoSansKR-Thin.otf") format("opentype");
 }
 
+@font-face {
+    font-family: "Noto Sans KR";
+    font-weight: 300;
+    src: url("./resource/fonts/NotoSansKR-Light.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "Noto Sans KR";
+    font-weight: 400;
+    src: url("./resource/fonts/NotoSansKR-Regular.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "Noto Sans KR";
+    font-weight: 500;
+    src: url("./resource/fonts/NotoSansKR-Medium.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "Noto Sans KR";
+    font-weight: 700;
+    src: url("./resource/fonts/NotoSansKR-Bold.otf") format("opentype");
+}
+
+@font-face {
+    font-family: "Noto Sans KR";
+    font-weight: 900;
+    src: url("./resource/fonts/NotoSansKR-Black.otf") format("opentype");
+}
 
 
 body {
-  margin: 0;
-  padding: 0;
-  /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
-  /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
-  /*  sans-serif;*/
-  font-family: "Noto Sans KR", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #ECEEF2;
+    margin: 0;
+    padding: 0;
+    /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
+    /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+    /*  sans-serif;*/
+    font-family: "Noto Sans KR", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #ECEEF2;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 button {
-  transition: background-color 50ms ease-out;
-  height: 2.3rem;
-  border: 0;
-  padding: 0;
-  border-radius: 1.15rem;
-  font: inherit;
-  background: #F0F0F0;
+    transition: background-color 50ms ease-out;
+    height: 2.3rem;
+    border: 0;
+    padding: 0;
+    border-radius: 1.15rem;
+    font: inherit;
+    background: #F0F0F0;
 }
-button:hover {background: #E0E0E0;}
-button:active {background: #D0D0D0;}
+
+button:hover {
+    background: #E0E0E0;
+}
+
+button:active {
+    background: #D0D0D0;
+}
+
 button > span {
-  display: inline-block;
-  height: 1.5rem;
+    display: inline-block;
+    height: 1.5rem;
+}
+
+input[type="text"] {
+    padding: 0;
+    border: 0;
+    background: #F0F0F0;
+    height: 2.3rem;
+    border-radius: 1.15rem;
+    font-size: 0.9rem;
+}
+input[type="text"]:focus {
+    outline: none;
+    background: #e7e7e7;
 }
