chore : modals styling

--- a/src/components/browser/Modal/PasswordModal.css
+++ b/src/components/browser/Modal/PasswordModal.css
@@ -5,10 +5,12 @@
     align-items: center;
     gap: 0.5rem;
 }
+.password.modal .title svg {
+    margin-top: 0.2rem;
+}
 .password.modal .title span {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     font-weight: 400;
-    /*line-height: 1.5rem;*/
     width: 20rem;
     text-overflow: ellipsis;
     overflow: hidden;
